--- a/lab4/lab4.ioc
+++ b/lab4/lab4.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
@@ -9,29 +10,31 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA5
-Mcu.Pin1=PA6
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PB3
-Mcu.Pin13=PB4
-Mcu.Pin14=PB5
-Mcu.Pin15=PB6
-Mcu.Pin16=PB7
-Mcu.Pin17=PB8
-Mcu.Pin18=PB9
-Mcu.Pin19=VP_SYS_VS_ND
-Mcu.Pin2=PA7
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PB0
-Mcu.Pin4=PB1
-Mcu.Pin5=PB2
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PB12
-Mcu.Pin9=PB13
-Mcu.PinsNb=22
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA11
+Mcu.Pin16=PA12
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB5
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB6
+Mcu.Pin21=VP_SYS_VS_ND
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -49,28 +52,32 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Output
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Locked=true
 PA6.Signal=GPIO_Output
-PA7.Locked=true
-PA7.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.Locked=true
-PB10.Signal=GPIO_Output
-PB11.Locked=true
-PB11.Signal=GPIO_Output
-PB12.Locked=true
-PB12.Signal=GPIO_Output
-PB13.Locked=true
-PB13.Signal=GPIO_Output
-PB14.Locked=true
-PB14.Signal=GPIO_Output
-PB15.Locked=true
-PB15.Signal=GPIO_Output
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.Locked=true
@@ -81,12 +88,21 @@ PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PB7.Locked=true
-PB7.Signal=GPIO_Output
-PB8.Locked=true
-PB8.Signal=GPIO_Output
-PB9.Locked=true
-PB9.Signal=GPIO_Output
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=BUTTON
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Input
+PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC14-OSC32_IN.GPIO_Label=BUTTON1
+PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Input
+PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=BUTTON2
+PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -115,7 +131,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
